# uplive

./: .gitignore  Makefile  README.md
backend/: .env.example  Dockerfile  alembic.ini  environment.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py  worker.py
backend/app/core/: config.py  database.py  deps.py  logging.py  redis.py
backend/app/modules/editor/: errors.py  ffmpeg.py  service.py
backend/app/modules/jobs/: dispatcher.py  domain.py  errors.py  pipeline.py  progress.py  queue.py  router.py  schemas.py  store.py
backend/app/modules/jobs/models/: job_row.py  source_row.py
backend/app/modules/jobs/repositories/: job_repository.py  source_repository.py
backend/app/modules/jobs/services/: job_store_service.py
backend/app/modules/sources/: downloader.py  errors.py  router.py  schemas.py  service.py
backend/app/modules/storage/: service.py
backend/deployments/docker/: docker-compose.app.yml  docker-compose.infra.host.yml  docker-compose.infra.yml  docker-compose.yml
backend/tests/: conftest.py  test_api.py  test_editor.py  test_integration_live.py  test_jobs.py  test_logging.py  test_pipeline.py  test_schemas.py
deployments/docker/: docker-compose.yml
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/deployments/docker/: docker-compose.app.yml  docker-compose.yml  (+1 more)
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  index.css  types.ts
(+5 files in other folders)
